--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.6.2",
     "google-translate-api": "^2.3.0",
